Add comprehensive security scanning to CI/CD pipeline
Security features added:
- Trivy: Vulnerability scanning for code and Docker images
- gosec: Go-specific security analysis
- CodeQL: Advanced code analysis (weekly schedule + PR/push)
- Dependabot: Automated dependency updates for Go, Docker, NPM, Actions

CI Workflow:
- Added security-scan job (runs before tests)
- Scans filesystem for vulnerabilities (CRITICAL, HIGH)
- Runs gosec for Go security issues
- Uploads results to GitHub Security tab

Release Workflow:
- Scans published Docker images with Trivy
- Uploads results to GitHub Security

Dependabot:
- Weekly updates for all dependencies
- Auto-labels and organizes PRs
- Separate configs for Go, Docker, NPM, GitHub Actions

CodeQL:
- Analyzes Go and JavaScript code
- Runs weekly + on every PR/push
- Security and quality queries enabled

--- a/.github/workflows/release-goreleaser.yml
+++ b/.github/workflows/release-goreleaser.yml
@@ -73,6 +73,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'karloscodes/formlander:${{ github.ref_name }}'
+          format: 'sarif'
+          output: 'trivy-docker-results.sarif'
+        continue-on-error: true
+
+      - name: Upload Docker scan results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-docker-results.sarif'
+        continue-on-error: true
+
       - name: Release summary
         run: |
           echo "## 🚀 Release Complete" >> $GITHUB_STEP_SUMMARY
