--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,14 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
+        continue-on-error: true
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
+        continue-on-error: true
 
       - name: Run gosec security scanner
         uses: securego/gosec@master
@@ -40,6 +42,7 @@ jobs:
         if: always()
         with:
           sarif_file: 'gosec-results.sarif'
+        continue-on-error: true
 
   # lint:
   #   name: Lint
